* added FieldRetrievingFactoryBean, for retrieving static fields (and also non-static field values of target objects)
* factory methods no longer only static: an instance method can be called on a bean named by the factory-bean attribute

Package org.springframework.jms
* fixed JmsTemplate102's "doSend" implementation to properly work with a JMS 1.0.2 API jar in the classpath

Package org.springframework.validation
* added "pushNestedPath"/"popNestedPath" methods to Errors interface, for convenient handling of temporary nested paths

Package org.springframework.web
* fixed TransformTag to derive from HtmlEscapingAwareTag and actually HTML-escape results (matching the TLD now)


Changes in version 1.1 RC1 (28.7.2004)
--------------------------------------

Package org.springframework.aop
* deprecated addInterceptor, addThrowsAdvice and other methods taking Advice subtype on Advised: use addAdvice etc
* added "opaque" property to ProxyConfig as an option to prevent proxies being cast to Advised, securing configuration
* fixed debug log statements to avoid invocation of "toString" method on target (not supported e.g. by Axis proxy)
* AOP proxies are now Serializable if all Advisors and the TargetSource are Serializable
* most framework pointcuts, advice and advisors are now Serializable
* added invocableClone() method to ReflectiveMethodInvocation to allow proceed to be called more than once
* added SETTERS and GETTERS constants to org.springframework.aop.support.Pointcuts
* improved NameMatchMethodPointcut for programmatic use
* deprecated RegexpMethodPointcut to allow for other regexp syntaxes besides Perl5: use Perl5RegexpMethodPointcut

Package org.springframework.beans
* BeanUtils' "instantiateClass" methods try to set the constructors accessible if given non-accessible constructors
* factored out PropertyAccessor base interface from BeanWrapper
* BeanWrapperImpl supports dots in keys, for example "map[my.key]"